# sloppy

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  bn  br  clean  fb_to_png.sh  get_stuff.sh
include/: 01_special.h  02_interrupts.h  03_op_sp_hl.h  04_op_r_imm.h  05_op_rp.h  06_ld_r_r.h  07_jr_jp_call_ret_rst.h  08_misc_instr.h  09_op_r_r.h  10_bit_ops.h  11_op_a_mhl.h  console.h  font.h  gba_input.h  gba_timing.h  gbc_counter.h  gbc_cpu.h  gbc_cpu.hpp  gbc_cpu_counter.hpp  gbc_cpu_test.h  gbc_emu.h  gbc_emu.hpp  gbc_gpu.h  gbc_io.h  gbc_mbc.h  gbc_mbc.hpp  gbc_mmu.h  gbc_mmu.hpp  gbc_ops.h  gbc_ppu.h  gbc_ppu.hpp  gbc_rtc.hpp  gui.h  text.h  types.h  utils.h  utils.hpp
include/gbc/: cpu.h  emu.h  mmu.h  ops.h
modules/: CMakeLists.txt
source/: console.c  font.c  gbc_cpu.c  gbc_gpu.c  gbc_mbc.c  gbc_mmu.c  gbc_ops.c  gbc_ppu.c  main.c  text.c
source/gbc/: cpu.c  instr.c  instruction.c  mmu.c  ops.c
src/: CMakeLists.txt  Makefile  cmake_install.cmake  gbc_cpu.c  gbc_cpu.cpp  gbc_emu.cpp  gbc_mbc.c  gbc_mbc.cpp  gbc_mmu.c  gbc_mmu.cpp  gbc_ops.c  gbc_ppu.c  gbc_ppu.cpp  gui.c  main.c  main.cpp  sloppy-emu
src/imgui/: imgui_impl_opengl3.cpp  imgui_impl_sdl.cpp
src/sloppy_gui/: cpu_window.cpp  emulator_window.cpp  io_window.cpp  map_window.cpp  mbc_window.cpp  serial_window.cpp  themes.cpp  tiledata_window.cpp
src/sloppy_gui/shaders/: gbc-color.vs
